# codepilot-cli

./: .gitignore  Dockerfile  README.md  agent.py  agent.yaml  pyproject.toml  test_tools.py
.github/workflows/: publish.yml
cli/: __main__.py  agent.yaml  app.py  cli_editor.py  modals.py  sessions.py  theme.py
